--- a/src/CleanArchitecture.Api/appsettings.json
+++ b/src/CleanArchitecture.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CleanArchitetureDbContext": "Data Source=DESKTOP-3A7C9V4;Initial Catalog=OptBot;Integrated Security=False;User Id=OptBotApi;Password=ob32;Application Name=OptBot.API;MultipleActiveResultSets=True;",
-    "TestCleanArchitetureDbContext": "Data Source=DESKTOP-3A7C9V4;Initial Catalog=OptBotTest;Integrated Security=False;User Id=OptBotApi;Password=ob32;Application Name=OptBot.API;MultipleActiveResultSets=True;"
+    "CleanArchitetureDbContext": "Data Source=XXX;Initial Catalog=OptBot;Integrated Security=False;User Id=XXX;Password=XXX;Application Name=OptBot.API;MultipleActiveResultSets=True;",
+    "TestCleanArchitetureDbContext": "Data Source=XXX;Initial Catalog=OptBotTest;Integrated Security=False;User Id=XXX;Password=XXX;Application Name=OptBot.API;MultipleActiveResultSets=True;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.RollingFile", "Serilog.Sinks.Async" ],
