--- a/src/CleanArchitecture.Api/appsettings.json
+++ b/src/CleanArchitecture.Api/appsettings.json
@@ -1,9 +1,8 @@
 {
   "AllowedHosts": "*",
-  "CorsDomains": "https://localhost:44337",
+  "CorsDomains": "https://cleanarchitecturewebapp.azurewebsites.net",
   "ConnectionStrings": {
-    "CleanArchitetureDbContext": "Data Source=DESKTOP-3A7C9V4;Initial Catalog=OptBot;Integrated Security=False;User Id=OptBotApi;Password=ob32;Application Name=OptBot.API;MultipleActiveResultSets=True;",
-    "TestCleanArchitetureDbContext": "Data Source=DESKTOP-3A7C9V4;Initial Catalog=OptBotTest;Integrated Security=False;User Id=OptBotApi;Password=ob32;Application Name=OptBot.API;MultipleActiveResultSets=True;"
+    "CleanArchitetureDbContext": "Data Source=cleanarchitecturedbserver.database.windows.net;Initial Catalog=CleanArchitecture;Integrated Security=False;User Id=dbadmin;Password=OptBot32!;Application Name=CleanArchitecture.API;MultipleActiveResultSets=True;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.RollingFile", "Serilog.Sinks.Async" ],
