--- a/tests/CleanArchitecture.FunctionalTests/CleanArchitecture.FunctionalTests.csproj
+++ b/tests/CleanArchitecture.FunctionalTests/CleanArchitecture.FunctionalTests.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\..\src\CleanArchitecture.Infrastructure\CleanArchitecture.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\CleanArchitecture.Api\CleanArchitecture.Api.csproj" />
     <ProjectReference Include="..\..\src\CleanArchitecture.Infrastructure\CleanArchitecture.Infrastructure.csproj" />
+    <ProjectReference Include="..\CleanArchitecture.IntegrationTests\CleanArchitecture.IntegrationTests.csproj" />
   </ItemGroup>
 
 </Project>
